# Aegis

./: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  db-constraints-fix.sql  package-lock.json  package.json  requirements.txt  sync_all.py  tsconfig.json
.claude/: settings.local.json
aegis-mcp/: README.md  package-lock.json  package.json  server.js  ticktick.js
aegis-mcp-python/: README.md  pyproject.toml  requirements.txt  server.py
aegis-mcp/test/: ticktick.test.mjs
app/: db.py  main.py  models.py  strava.py  ticktick.py  ui.py
docs/: CRON_SETUP.md
notebooks/: scheduled_sync.ipynb
scripts/: cron_wrapper.sh  crontab.example  sync_wrapper.sh
sql/: schema.sql
src/: index.ts
src/core/: aegis.ts  goals-manager.ts  intent-classifier.ts  state-manager.ts
src/modules/: health.ts  nutrition.ts  planning.ts  tasks.ts
src/services/: neon.ts
src/types/: index.ts
src/utils/: duration-parser.ts  food-parser.ts  priority-calc.ts
